# TFG

./: .gitignore  README.md  structure.md
digipanca/: .gitignore  pyproject.toml  saved_metrics_test.csv  saved_metrics_test_changed.csv
digipanca/configs/data/: 5fold.yaml  default.yaml  default3d.yaml  default_no_test.yaml  preprocess.yaml  preprocess_2d.yaml  preprocess_2d_res_test.yaml  preprocess_2d_res_train.yaml  preprocess_2d_train.yaml  preprocess_3d.yaml  preprocess_3d_res_test.yaml  preprocess_3d_res_train.yaml  preprocess_3d_train.yaml
digipanca/configs/evaluation/: evaluate.yaml  evaluate_test.yaml  evaluate_validation.yaml
digipanca/configs/experiments/: deep_aug.yaml  deep_aug_2.yaml  deep_aug_3.yaml  deep_aug_4.yaml  deep_aug_5.yaml  deep_aug_6.yaml  deep_aug_7.yaml  deep_aug_8.yaml  deep_aug_9.yaml  deep_aug_randcrop.yaml  deep_aug_randcrop_2.yaml  deep_aug_randcrop_3.yaml  deep_aug_randcrop_4.yaml  deep_aug_randcrop_no_bordercrop.yaml  deep_aug_randcrop_no_bordercrop2.yaml  deep_aug_randcrop_no_bordercrop_2.yaml  deep_aug_randcrop_no_bordercrop_3.yaml  deep_aug_randcrop_no_bordercrop_4.yaml  experiment_001.yaml  experiment_deep.yaml  experiment_unet_monai.yaml  experiment_unet_monai2.yaml  experiment_unet_monai_2.yaml  experiment_unet_monai_3.yaml  one.yaml  one_deep.yaml  (+15 more)
digipanca/runs/: events.out.tfevents.1748021967.DESKTOP-O2BPEIN.5116.0  events.out.tfevents.1748022985.DESKTOP-O2BPEIN.19404.0
digipanca/scripts/: data_preprocessing.py  eval.py  eval_experiment.py  fit.py  monai_train.py  predict.py  test_metrics.py  train.py  train_with_es.py
(+163 files in other folders)
